gcc warnings compiling jdk/src/share/back

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: core-svc
    • b04


      It's currently very difficult to errors or new warnings in the build. One noisy area is the JDWP agent.

      /u/alanb/ws/jdk9-dev/jdk/src/share/back/ArrayTypeImpl.c: In function ‘newInstance’:
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/ArrayTypeImpl.c:124:19: warning: ‘componentClass’ may be used uninitialized in this function [-Wuninitialized]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/ArrayTypeImpl.c:115:16: note: ‘componentClass’ was declared here
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c: In function ‘jvmtiErrorText’:
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:191:9: warning: case value ‘181’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:192:9: warning: case value ‘182’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:193:9: warning: case value ‘183’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:194:9: warning: case value ‘184’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:195:9: warning: case value ‘185’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:196:9: warning: case value ‘186’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:197:9: warning: case value ‘187’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:198:9: warning: case value ‘188’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:199:9: warning: case value ‘189’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:200:9: warning: case value ‘190’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:201:9: warning: case value ‘191’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:202:9: warning: case value ‘192’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:203:9: warning: case value ‘193’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:204:9: warning: case value ‘194’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:205:9: warning: case value ‘195’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:206:9: warning: case value ‘196’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:207:9: warning: case value ‘197’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:208:9: warning: case value ‘198’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:209:9: warning: case value ‘199’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:210:9: warning: case value ‘200’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:211:9: warning: case value ‘201’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:212:9: warning: case value ‘202’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:213:9: warning: case value ‘203’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:214:9: warning: case value ‘204’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:215:9: warning: case value ‘205’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/error_messages.c:216:9: warning: case value ‘206’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c: In function ‘map2jdwpError’:
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2251:9: warning: case value ‘181’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2202:9: warning: case value ‘182’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2203:9: warning: case value ‘183’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2205:9: warning: case value ‘184’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2252:9: warning: case value ‘185’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2253:9: warning: case value ‘186’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2223:9: warning: case value ‘187’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2197:9: warning: case value ‘188’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2225:9: warning: case value ‘189’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2227:9: warning: case value ‘190’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2229:9: warning: case value ‘191’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2231:9: warning: case value ‘192’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2233:9: warning: case value ‘193’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2235:9: warning: case value ‘194’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2237:9: warning: case value ‘195’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2239:9: warning: case value ‘196’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2241:9: warning: case value ‘197’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2243:9: warning: case value ‘198’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2245:9: warning: case value ‘199’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2247:9: warning: case value ‘200’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2185:9: warning: case value ‘201’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2193:9: warning: case value ‘202’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2128:9: warning: case value ‘203’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2190:9: warning: case value ‘204’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2141:9: warning: case value ‘205’ not in enumerated type ‘jvmtiError’ [-Wswitch]
      /u/alanb/ws/jdk9-dev/jdk/src/share/back/util.c:2154:9: warning: case value ‘206’ not in enumerated type ‘jvmtiError’ [-Wswitch]

            Assignee:
            Alan Bateman
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: