8033758: gcc warnings compiling jdk/src/share/back

Reviewed-by: dholmes, sla